--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hi there! I am Joyce</h1>
-        <img src="/images/Joyce_Martinez.jpg" class="image-cirle" height="100" alt="profile_picture">
+        <img src="https://joycemt.github.io/profile/images/Joyce_Martinez.jpg" class="image-cirle" height="100" alt="profile_picture">
         <p> I am passionate about user experience so I started my journey at Le Wagon to learn how to build user-friendly websites and applications.</p>
         <br/>
         <a class="btn-blue" href="www.lewagon.com">Discover Le Wagon</a>
