--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hi there! I am Joyce</h1>
-        <img src="https://scontent.fmex22-1.fna.fbcdn.net/v/t1.0-9/64659027_10156750553814822_1171775096776294400_o.jpg?_nc_cat=109&_nc_sid=174925&_nc_eui2=AeH2wN7kzVaxwL1xfQOmlLoEEMrIn1Vb8DkQysifVVvwOcEsVyUvS4OtSkSe63yFTXo&_nc_ohc=-osXUZUwUYYAX80-Twv&_nc_ht=scontent.fmex22-1.fna&oh=bc8d2424d13390adc10b6381a27f3f14&oe=5F47E3D4" class="image-cirle" height="100" alt="profile_picture">
+        <img src="https://scontent.fmex22-1.fna.fbcdn.net/v/t1.0-9/64659027_10156750553814822_1171775096776294400_o.jpg?_nc_cat=109&_nc_sid=174925&_nc_eui2=AeH2wN7kzVaxwL1xfQOmlLoEEMrIn1Vb8DkQysifVVvwOcEsVyUvS4OtSkSe63yFTXo&_nc_ohc=-osXUZUwUYYAX80-Twv&_nc_ht=scontent.fmex22-1.fna&oh=bc8d2424d13390adc10b6381a27f3f14&oe=5F47E3D4" class="image-circle" height="150" alt="profile_picture">
         <p> I am passionate about user experience so I started my journey at Le Wagon to learn how to build user-friendly websites and applications.</p>
         <br/>
         <a class="btn-red" href="www.lewagon.com">Discover Le Wagon</a>
